# praxis-sentence-transformer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
notebooks/: 00_Multi_Stage_Error_Analysis.ipynb  01_Claude_Enhanced_Requirements.ipynb  02_Sentence_Transformer_Matching.ipynb  03_Similarity_Score_Performance.ipynb  04_Claude_Requirements_Discovery.ipynb  05_Advanced_Transformer_Analysis.ipynb  06_ML_Similarity_Analysis.ipynb  07_HuggingFace_API_Testing.ipynb  08_Enhanced_Claude_Finder.ipynb  09_Multi_Modal_Analysis_Pipeline.ipynb  10_Multi_Model_Transformer_Processing.ipynb
schema/: neo4j-schema.json
src/praxis_sentence_transformer/: __init__.py
src/praxis_sentence_transformer/analysis/: __init__.py  analyzer.py  effort_analyzer.py  error_analysis.py  feature_analyzer.py  manager.py  model_trainer.py  validation.py
src/praxis_sentence_transformer/analyzers/: __init__.py  error_analysis.py  sentence_transformer.py
src/praxis_sentence_transformer/clients/: __init__.py
src/praxis_sentence_transformer/clients/claude/: __init__.py  claude_requirements_analyzer.py  claude_sentance_transformer.py
src/praxis_sentence_transformer/loaders/: __init__.py  document_loader.py  requirements_loader.py  requirements_preprocessor.py
src/praxis_sentence_transformer/logger/: __init__.py  logger.py
src/praxis_sentence_transformer/neo4j_operations/: __init__.py  graph.py  models.py  neo4j_client.py
src/praxis_sentence_transformer/preprocessors/: __init__.py  requirements_preprocessor.py
src/praxis_sentence_transformer/utils/: __init__.py  cuda.py  file_handler.py  similarity.py  visualization.py
src/praxis_sentence_transformer/visualization/: __init__.py  model_visualizer.py  visualization.py
